--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deep_affects",
+  "name": "deep-affects",
   "version": "0.1.0",
   "description": "Node wrapper client for DeepAffects API",
   "license": "Unlicense",
