Added test for Audio spec. Updated dependencies

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "./node_modules/mocha/bin/mocha --recursive"
   },
   "dependencies": {
-    "superagent": "1.7.1"
+    "superagent": "1.7.1",
+    "is": "1.0.0",
+    "path": "0.12.7"
   },
   "devDependencies": {
     "mocha": "~2.3.4",
